--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,8 @@ h1 {
   top: -10px;
 }
 
-.categories-nav {
+.categories {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 footer {
