--- a/styles.css
+++ b/styles.css
@@ -28,21 +28,38 @@ h1 {
 }
 
 .qcard {
+  text-align: center;
   position: relative;
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  align-items: center;
-
+  justify-content: center;
   border: solid;
   border-color: black;
   border-radius: 5px;
 }
 
+h2 {
+  display: flex;
+  justify-content: center;
+}
+
+.showanswer {
+  display: flex;
+  width: 150px;
+  justify-content: center;
+  border: solid;
+}
+
+.showanswer:hover {
+  background-color: violet;
+  cursor: pointer;
+}
+
 .bookmark {
   position: absolute;
-  right: -10px;
-  top: -10px;
+  right: -5px;
+  top: -5px;
+  font-size: 40px;
 }
 
 .categories {
@@ -50,9 +67,9 @@ h1 {
 }
 
 .tag {
-  width: 60px;
+  width: 80px;
   background-color: lightgrey;
-  margin: 10px;
+  margin: 5px;
 }
 
 footer {
