--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-@import "./themes.css";
-@import "./global.css";
+@import "./components/themes.css";
+@import "./components/global.css";
 @import "./components/header.css";
 @import "./components/card.css";
 @import "./components/showanswer.css";
