--- a/components/footer.css
+++ b/components/footer.css
@@ -19,3 +19,12 @@ footer {
 .active {
   background-color: bisque;
 }
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: bisque;
+}
