--- a/components/form.css
+++ b/components/form.css
@@ -1,5 +1,12 @@
 .form {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   background-color: aqua;
+  height: 300px;
+  margin-bottom: 30px;
+}
+textarea {
+  resize: none;
+  height: 50px;
 }
